--- a/css/layout.css
+++ b/css/layout.css
@@ -1,2 +1,2 @@
-body {background-color: pink; padding:0;}
+body {background-color: pink; padding:0; margin:0;}
 #posterwall {width:10px; margin:auto; position:relative; background-color:black;}
