--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,4 @@
 body {background-color: pink; padding:0; margin:0;}
 #posterwall {width:1px; margin:auto; position:relative; background-color:black;}
 .poster {position:absolute;}
-.one {top: 50px; left: 50px;}
+.title {top: 50px; left: 50px;}
